src/test/resources/semantic/custom/reject/voidParamMiddle.ul
void main() {
}

void foo(int one, float two, void three, string four) {
}
